force-app/main/default/objects/Account/fields/Aims__c.field-meta.xml
<CustomField>
    <fullName>Aims__c</fullName>
    <label>Description/Aims</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>