force-app/main/default/objects/Account/fields/Group_Pillar__c.field-meta.xml
<CustomField>
    <fullName>Group_Pillar__c</fullName>
    <label>Group Pillar</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community</fullName>
            </value>
            <value>
                <fullName>Environment</fullName>
            </value>
            <value>
                <fullName>Social Inclusion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>