force-app/main/default/objects/Account/fields/Group_s_structure__c.field-meta.xml
<CustomField>
    <fullName>Group_s_structure__c</fullName>
    <inlineHelpText>Please select the most appropriate description of your group’s structure. If you choose ‘other’ please give details:</inlineHelpText>
    <label>Group&apos;s structure</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Affiliated</fullName>
            </value>
            <value>
                <fullName>Association</fullName>
            </value>
            <value>
                <fullName>Charity</fullName>
            </value>
            <value>
                <fullName>Committee</fullName>
            </value>
            <value>
                <fullName>Co-operative</fullName>
            </value>
            <value>
                <fullName>Limited Company</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Set of Rules</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>