force-app/main/default/objects/Account/fields/Municipal_District__c.field-meta.xml
<CustomField>
    <fullName>Municipal_District__c</fullName>
    <label>Municipal District</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>District 1</fullName>
            </value>
            <value>
                <fullName>District 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>