force-app/main/default/objects/Account/fields/Number_of_members_in_org__c.field-meta.xml
<CustomField>
    <fullName>Number_of_members_in_org__c</fullName>
    <label>Number of members in org</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>