force-app/main/default/objects/Account/fields/Number_of_other_staff_in_org__c.field-meta.xml
<CustomField>
    <fullName>Number_of_other_staff_in_org__c</fullName>
    <inlineHelpText>e.g. C.E. /Job Bridge/TUS</inlineHelpText>
    <label>Number of other staff in org</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>